syntax = "proto3";

package fullbottle.srv.user;

service UserService {
    rpc GetUserInfo(GetUserRequest) returns (GetUserResponse) {}
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc ModifyUser(ModifyUserRequest) returns (ModifyUserResponse) {}

    rpc UserLogin(UserLoginRequest) returns (UserLoginResponse) {}

    rpc GetUserAvatar(GetUserAvatarRequest) returns (GetUserAvatarResponse) {}
    rpc UploadUserAvatar(UploadUserAvatarRequest) returns (UploadUserAvatarResponse) {}
}

message GetUserRequest {
    int64 uid = 1;
}

message GetUserResponse {
    int64 uid = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    int32 role = 5;
    string avatarFid = 6;
    int32 status = 7;
    int64 createTime = 8;
    int64 updateTime = 9;
    int64 deleteTime = 10;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message CreateUserResponse {

}

message ModifyUserRequest {
    int64 uid = 1;
    string username = 2;
    string password = 3;
}

message ModifyUserResponse {

}

message UserLoginRequest {
    string email = 1;
    string password = 2;
}

message UserLoginResponse {
    string token = 1;
    int64 expire = 2;
}


message GetUserAvatarRequest {
    int64 uid = 1;
}

message GetUserAvatarResponse {
    string contentType = 1;
    bytes avatar = 2;
}

message UploadUserAvatarRequest {
    int64 uid = 1;
    bytes avatar = 2;
}

message UploadUserAvatarResponse {

}